--- a/styles/style.css
+++ b/styles/style.css
@@ -1,9 +1,15 @@
-@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500:1,700;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&display=swap');
 
 @font-face {
     font-family: "Cruinn";
-    src: url(fonts\Cruinn.ttf);
+    src: url(../fonts/Cruinn.ttf);
+}
+
+@font-face {
+    font-family: "Lato-Medium";
+    src: url(../fonts/latomedium.ttf);
 }
 
 body{
@@ -46,6 +52,13 @@ header a:nth-child(1){
     height: 23vw;
     border-radius: 12px;
     border: #001858 solid 4px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 2vw;
+    padding-left: 3.5vw;
+    padding-right: 2vw;
+
 }
 
 .main__container{
@@ -73,35 +86,28 @@ header a:nth-child(1){
     border-radius: 12px;
     border: #001858 solid 0.4vw;
     box-shadow: 0 4px 4px rgba(0, 0, 0, 0.250);
-    cursor: pointer;
 }
 
 .block:hover{
     animation: upper-transit 1s 1;
     animation-fill-mode: forwards;
-    cursor: pointer;
 }
 
 @keyframes upper-transit{
     30% {
-        transform: translateY(-3px);
-    }
-    50%{
         transform: translateY(-4px);
     }
-    70%{
-        transform: translateY(-5px);
-    }
     to{
-        transform: translateY(-6px);
+        transform: translateY(-4px);
     }
 }
 
 .block1{
     grid-area: block1;
     background-image: url(../images/big_block-cat.png);
-    background-size: cover;
-    cursor: pointer;
+    background-size: contain;
+    background-size: 101%;
+    background-repeat: no-repeat;
 }
  
 .block2{
@@ -142,8 +148,9 @@ header a:nth-child(1){
 .block6{
     grid-area: block6;
     background-image: url(../images/long_block-cat.png);
-    background-size: cover;
-    cursor: pointer;
+    background-size: contain;
+    background-repeat: no-repeat;
+    background-size: 105%;
 }
 
 .block7{
@@ -151,8 +158,242 @@ header a:nth-child(1){
 }
  
 .block7-p{
-    font-family: "Roboto", sans-serif;
-    font-weight: 450;
+    font-family: "Lato-Medium";
     font-size: 1.3vw;
     margin-left: 3%;
 }
+
+.avatar{
+    width: 12vw;
+    height: 12vw;
+    background-image: url(../images/avatar.jpg);
+    background-size: contain;
+    background-repeat: no-repeat;
+    border-radius: 113px;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.250);
+}
+
+.text_links{
+    display: flex;
+    flex-direction: column;
+}
+
+.text_links>h1{
+    font-family: "Ubuntu", sans-serif;
+    font-weight: 700;
+    font-size: 3.5vw;
+    margin: 0;
+    margin-left: 5vw;
+}
+
+.text_links>p{
+    font-family: "Lato-Medium";
+    font-size: 1.4vw;
+}
+
+.spotify,.steam,.twitch{
+    border-radius: 32px;
+    width: 2.9vw;
+    height: 2.9vw;
+    background-color: #D9D9D9;
+    box-shadow: 0 4px 4px rgba(0, 0, 0, 0.250);
+}
+
+.side_links{
+    display: flex;
+    gap: 2vw;
+    margin-left: 3.9vw;
+}
+
+.spotify{
+    background-image: url(../images/spotify.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 60%;
+}
+
+.steam{
+    background-image: url(../images/steam.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 60%;
+}
+
+.twitch{
+    background-image: url(../images/twitch.svg);
+    background-repeat: no-repeat;
+    background-position: center;
+    background-size: 60%;
+}
+
+.spotify:hover{
+    background-color: #62d366;
+}
+
+.steam:hover{
+    background-image: url(../images/steam_white.svg);
+    background-color: #2b5c8d;
+}
+
+.twitch:hover{
+    background-image: url(../images/twitch_white.svg);
+    background-color: #9650fb;
+}
+
+.left{
+    display: flex;
+    flex-direction: column;
+}
+
+.pustota{
+    font-family: "Lato-Medium";
+    color: #F0D3A4;
+    width: 35vw;
+    font-size: 1.6vw;
+    margin-top: 12vw;
+    margin-left: 4.5vw;
+}
+
+.author{
+    font-family: "Lato", sans-serif;
+    font-weight: 500;
+    font-size: 1.2vw;
+    margin-left: 5%;
+    margin-bottom: 1%;
+}
+
+.cat_white_gif{
+    background-image: url(../images/white_cat.gif);
+    width: 13vw;
+    height: 11vw;
+    background-size: contain;
+    background-repeat: no-repeat;
+    transform: translateY(-2.5vw) translateX(8vw);
+}
+
+@media (max-width: 500px) {
+
+    .cat_white_gif{
+        background-image: url(../images/white_cat.gif);
+        width: 25vw;
+        height: 23vw;
+        background-size: contain;
+        background-repeat: no-repeat;
+        transform: translateY(-10.5vw) translateX(20vw);
+    }
+
+    .block7-p{
+        font-family: "Lato-Medium";
+        font-size: 4vw;
+        margin-left: 3%;
+    }
+
+    .text_links>h1{
+        font-family: "Ubuntu", sans-serif;
+        font-weight: 700;
+        font-size: 8vw;
+        margin: 0;
+        margin-left: 9.6vw;
+    }
+    
+    .text_links>p{
+        font-family: "Lato-Medium";
+        font-size: 4vw;
+    }
+    
+    .spotify,.steam,.twitch{
+        border-radius: 32px;
+        width: 7vw;
+        height: 7vw;
+        background-color: #D9D9D9;
+        box-shadow: 0 4px 4px rgba(0, 0, 0, 0.250);
+    }
+
+    .side_links{
+        display: flex;
+        gap: 3vw;
+        margin-left: 7vw;
+    }
+
+    .avatar{
+        height: 25vw;
+        width: 25vw;
+    }
+
+    
+
+    header{
+        margin-top: 2%;
+        margin-bottom: 2%;
+    }
+
+    header nav{
+        gap: 12vw;
+        margin-left: -3vw;
+    }
+
+    header a{
+        font-size: 5vw;
+        align-items: center;
+    }
+
+    .block{
+        border-radius: 12px;
+        box-shadow: 0 4px 4px rgba(0, 0, 0, 0.250);
+    }
+
+    .block1,.block6,.block7{
+        border: #001858 solid 4px;
+    }
+
+    .main__container{
+        flex-direction: column;
+    }
+
+    .pustota{
+        display: none;
+    }
+
+    .main_title{
+        background-color: #FCE4D8;
+        width: 80vw;
+        height: 50vw;
+        border-radius: 12px;
+        border: #001858 solid 4px;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+        gap: 2vw;
+        padding-left: 3.5vw;
+        padding-right: 2vw;
+        margin-left: auto;
+        margin-right: auto;
+    
+    }
+
+    .main_links{
+        margin-top: 18vw;
+        display: grid;
+        grid-template-columns: repeat(3, 25.8vw);
+        grid-template-rows: repeat(4, 25.8vw);
+        gap: 5vw;
+        grid-template-areas: 
+        "block1 block1 block2"
+        "block1 block1 block3"
+        "block4 block5 block6"
+        "block7 block7 block6";
+
+        margin-left: auto;
+        margin-right: auto;
+    }
+
+    .author{
+        font-family: "Lato", sans-serif;
+        font-weight: 700;
+        font-size: 3.5vw;
+        margin-left: 5%;
+        margin-bottom: 1%;
+        margin-top: 2vw;
+    }
+
+  }
