--- a/styles/style.css
+++ b/styles/style.css
@@ -233,8 +233,8 @@ bongo cat*/
     background-image: url(../images/click.gif);
     background-size: contain;
     background-repeat: no-repeat;
-    width: 10vw;
-    height: 10vw;
+    width: 5vw;
+    height: 5vw;
     z-index: 3;
 }
 
@@ -243,7 +243,7 @@ header .click{
 }
 
 .main_links .click{
-    transform: translate(30vw, 50vw);
+    transform: translate(12vw, 20vw);
     z-index: 2;
 }
 
@@ -417,6 +417,19 @@ header .click{
 }
 
 @media (max-width: 500px) {
+    .click{
+        width: 10vw;
+        height: 10vw;
+    }
+
+    .main_links .click{
+        transform: translate(30vw, 50vw);
+    }
+
+    header .click{
+        transform: translate(8vw, 6vw);
+    }
+
 
     .burger-menu-content{
         width: 150px;
